// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useOnce useOnce works with deps and initial. 1`] = `
<div>
  <div
    data-testid="44"
  >
    Club
  </div>
</div>
`;

exports[`useOnce useOnce works with deps. 1`] = `
<div>
  <div
    data-testid="44"
  >
    Club
  </div>
</div>
`;

exports[`useOnce useOnce works with initial. 1`] = `
<div>
  <div
    data-testid="43"
  >
    Club
  </div>
</div>
`;

exports[`useOnce useOnce works. 1`] = `
<div>
  <div
    data-testid="42"
  >
    Club
  </div>
</div>
`;
